package com.smartqueue.enums;

public enum AppointmentStatus {
    CONFIRMED,
    CANCELLED,
    COMPLETED,
    NO_SHOW
}
