package com.smartqueue.enums;

public enum QueueStatus {
    WAITING,
    CALLED,
    IN_SERVICE,
    COMPLETED,
    NO_SHOW,
    LEFT
}
